--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ services:
     ports:
       - "6379:6379"
 
-  # celery:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   restart: always
-  #   command: celery -A tasks worker -Q to_compute -l info
-  #   depends_on:
-  #     - redis
+  celery:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: always
+    command: celery -A tasks worker -Q to_compute -l info
+    depends_on:
+      - redis
   
