--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     image: redis
     ports:
       - "6379:6379"
+    networks:
+      - app-network
 
   celery:
     build:
@@ -12,4 +14,9 @@ services:
     command: celery -A tasks worker -Q to_compute -l info
     depends_on:
       - redis
+    networks:
+      - app-network
   
+networks:
+  app-network:
+    driver: bridge
